--- a/pom.xml
+++ b/pom.xml
@@ -9,26 +9,21 @@
   <url>http://maven.apache.org</url>
   
   <properties>
-		<spring.version>5.0.0.RELEASE</spring.version>
-		<hibernate.version>5.2.2.Final</hibernate.version>
+		<spring.version>5.1.6.RELEASE</spring.version>
+		<hibernate.version>5.4.3.Final</hibernate.version>
 		<slf4j.version>1.7.24</slf4j.version>
+	    <maven.compiler.source>1.6</maven.compiler.source>
+	    <maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
   
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     
     <dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
-			<scope>provided</scope>
 		</dependency>
-		
+	
 		
 		<dependency>
 			<groupId>xstream</groupId>
@@ -40,7 +35,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>6.0.5</version>
+			<version>8.0.13</version>
 		</dependency>
 
 		<!-- SPRING LIBRARIES -->
@@ -89,12 +84,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.4</version>
+			<version>2.9.9</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.9.4</version>
+			<version>2.9.9</version>
 		</dependency>
 
 		<!-- Pool Connection Manage -->
@@ -155,9 +150,7 @@
 			<artifactId>modelmapper</artifactId>
 			<version>0.7.7</version>
 		</dependency>
-    
   </dependencies>
-  
   
   <repositories>
 		<repository>
@@ -166,7 +159,6 @@
 			<url>https://artifacts.alfresco.com/nexus/content/repositories/public/</url>
 		</repository>
 	</repositories>
-  
   
   
   <build>
